--- a/frontend/src/Components/PremiumBoutiques.module.css
+++ b/frontend/src/Components/PremiumBoutiques.module.css
@@ -34,7 +34,7 @@
 }
 .premiumCard {
   position: relative;
-  width: 25rem;
+  /* width: 25rem; */
   /* height: 300px; */
   border-radius: 10px;
   /* padding: 30px 50px; */
