--- a/frontend/src/pages/FooterPage.module.css
+++ b/frontend/src/pages/FooterPage.module.css
@@ -10,9 +10,7 @@
 }
 .leftRightdivContainer {
   display: flex;
-  gap: 125px;
-  padding-left: 60px;
-  padding-right: 50px;
+  padding: 0 5%;
   margin-top: 80px;
 }
 
@@ -20,6 +18,7 @@
   width: 70%;
   display: flex;
   gap: 12px;
+  margin: auto;
 }
 
 .right {
@@ -103,11 +102,11 @@
 
 .i_div {
   display: flex;
-  justify-content: center;
-  gap: 100px;
+  justify-content: space-around;
+  align-items: center;
   /* margin-top: 70px; */
   margin-bottom: 50px;
-  padding-top: 50px;
+  padding: 25px 0;
 }
 
 .icon_title {
@@ -133,7 +132,8 @@
   width: 92%;
 }
 .botomF {
-  padding-left: 60px;
+  /* padding-left: 60px; */
+  padding: 0 10px;
   font-size: 11px;
   color: #484848;
   /* padding: 20px 0px 0px; */
@@ -151,8 +151,8 @@
 
   .i_div {
     flex-direction: column;
-    gap: 20px;
-    margin-left: -90px;
+    justify-content: center;
+    gap: 25px;
   }
 
   .icon_title span {
@@ -161,12 +161,15 @@
   .icon_title img {
     height: 50px;
   }
+  .topSection {
+    padding: 0 15px;
+  }
 
   .left {
     width: 100%;
     display: flex;
     flex-direction: column;
-    margin-left: 50px;
+    text-align: center;
   }
   .right {
     width: 78%;
@@ -257,6 +260,7 @@
 
   .socialmediadiv {
     display: flex;
+    justify-content: center;
     font-size: 20px;
     gap: 2px;
     color: #484848;
@@ -267,8 +271,6 @@
     padding-left: 0px;
     font-size: 13px;
     color: #484848;
-    margin-left: 42px;
-    margin-right: 42px;
   }
 
   .botomtext {
