--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,6 +27,23 @@
   color: #61dafb;
 }
 
+.SideMenuAndPageContent{
+  display: flex;
+  flex: 1;
+  justify-content: flex-start;
+  align-items: flex-start;
+  background-color: rgba(0, 0, 0, 0.05) ;
+}
+.SideMenu{
+  height: 100%;
+}
+.SideMenuVertical{
+  height: 100%;
+}
+.PageContent{
+  padding-left: 12px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
